RESOLVED FIXED186220
[iOS] MediaPlayer.framework is not always available
https://bugs.webkit.org/show_bug.cgi?id=186220
Summary [iOS] MediaPlayer.framework is not always available
Eric Carlson
Reported 2018-06-01 19:41:31 PDT
MediaPlayer framework isn't always available.
Attachments
Patch (1.71 KB, patch)
2018-06-01 19:47 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-06-01 19:42:43 PDT
Eric Carlson
Comment 2 2018-06-01 19:47:38 PDT
Tim Horton
Comment 3 2018-06-03 12:55:11 PDT
Comment on attachment 341819 [details] Patch This is a good quick fix, but maybe we can use HAVE_MEDIA_PLAYER_FRAMEWORK or whatever it’s called to avoid building this code at all?
WebKit Commit Bot
Comment 4 2018-06-03 13:22:11 PDT
Comment on attachment 341819 [details] Patch Clearing flags on attachment: 341819 Committed r232453: <https://trac.webkit.org/changeset/232453>
WebKit Commit Bot
Comment 5 2018-06-03 13:22:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.