[iOS] MediaPlayer.framework is not always available https://bugs.webkit.org/show_bug.cgi?id=186220 <rdar://problem/40571286>

Reviewed by Tim Horton.

* platform/ios/RemoteCommandListenerIOS.mm:
(WebCore::RemoteCommandListener::create):


Canonical link: https://commits.webkit.org/201642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232453 268f45cc-cd09-0410-ab3c-d52691b4dbfc